--- a/README.org
+++ b/README.org
@@ -1,65 +1,123 @@
-# Implementation of Mel Frequency Cepstrum Coefficient
 
-[MFCC](https://www.wikiwand.com/en/Mel-frequency_cepstrum)  are the most often used features in Automatic Speech Recognition (ASR). This project is a pure common-lisp implementation of MFCC. For more details and to understand the steps involved in the computation of MFCC, refer the [doc](./doc/) folder.
+* Implementation of Mel Frequency Cepstrum Coefficient
+
+[[https://www.wikiwand.com/en/Mel-frequency_cepstrum][MFCC]] are the most often used features in Automatic Speech Recognition (ASR). This project is a pure common-lisp implementation of MFCC. For more details and to understand the steps involved in the computation of MFCC, refer the [[./doc][doc]] folder.
+
+** Features
+- Read/Write WAV Files
+- Play WAV Files
+- Generate signal using functions
+- Filter bank features
+- MFCC features
+- Normalized MFCC features
+- Delta features
+- Energy
+
+** Usage:
+*** Record audio:
+#+BEGIN_SRC common-lisp
+(record-audio :record-time 2
+              :save-to-file t
+              :audio-filename "new-mic.wav"
+              :plot-data nil
+              :plot-filename "record-plot.png")
+
+#+END_SRC
+
+*** Play WAV file:
+#+BEGIN_SRC common-lisp
+(play-wav-audio "new-mic.wav")
+#+END_SRC
 
 
-## Usage:
-
-### Loading WAV File:
-```
+*** Loading WAV File:
+#+BEGIN_SRC common-lisp
 (defparameter *wav-file* "./data/music-mono-1.wav")
 (defparameter *wav* (load-wav-file *wav-file*))
-```
 
-### To cut the audio-signal for the specified time (seconds)
-```
+#+END_SRC
+
+*** Generate WAV file using a function:
+#+BEGIN_SRC common-lisp
+(defparameter *wave* (make-instance 'wave-from-function
+                                    :duration 1.0 
+                                    :frequency 5
+                                    :num-channels *num-channels*))
+(create-wave *wave*
+             :plot-data nil
+             :plot-filename "sine-example.png"
+             :save-to-file t
+             :filename "low-freq.wav")
+
+#+END_SRC
+
+*** Generated Signal
+[[./data/sine-example.png][sine-wave]]
+
+*** To cut the audio-signal for the specified time (seconds)
+#+BEGIN_SRC common-lisp
 ;; (defparameter *snip* (chunk-audio-data (load-wav-file *wav-file*) 0.5))
 ;; (defparameter *sig* (make-signal-processing *snip*
 ;;                                             (num-channels *wav*)))
 
-```
+#+END_SRC
 
-### Create a signal processing object for pre-processing:
-```
+*** Create a signal processing object for pre-processing:
+#+BEGIN_SRC common-lisp
 (defparameter *sig* (make-signal-processing (audio-data *wav*)
                                             (num-channels *wav*)))
-```
 
-### Create a MFCC object to obtain the feature values: 
-```
+#+END_SRC
+
+
+*** Create a MFCC object to obtain the feature values: 
+#+BEGIN_SRC common-lisp
 (defparameter *mfcc-obj* (make-mfcc *sig*))
 (defparameter *lift* (apply-liftering-to-dct *mfcc-obj*))
 (defparameter *log-mean* (get-mean-normalization (log-mel-features *mfcc-obj*)))
 (defparameter *mfcc-mean* (get-mean-normalization *lift*))
 (defparameter *final* (delta *lift* 2))
 (defparameter *energy* (find-energy (power-spectrum *sig*)))
-```
+#+END_SRC
 
-## Results:
-### MFCC feature (only the first feature vector):
-```
+
+** Results:
+*** MFCC feature (only the first feature vector):
+#+BEGIN_SRC common-lisp
 (aops:sub *lift* 0)
+#+END_SRC
 
+#+BEGIN_SRC common-lisp
 ;; => #(84.32953643798828d0 2.320774516956553d0 -35.99634746398786d0 
-    5.854659999539559d0 -9.431935471432663d0 9.418806709697838d0 
-    5.991028051621737d0 12.55219582362723d0 -8.993686128896886d0 
-    -29.59149764341289d0 -18.555555851435216d0 1.50505131483078d0 22.858585376021495d0)
-```
+5.854659999539559d0 -9.431935471432663d0 9.418806709697838d0 
+5.991028051621737d0 12.55219582362723d0 -8.993686128896886d0 
+-29.59149764341289d0 -18.555555851435216d0 1.50505131483078d0 22.858585376021495d0)
 
-### Delta features (only the first feature vector): 
-```
+#+END_SRC
+
+
+*** Delta features (only the first feature vector): 
+#+BEGIN_SRC common-lisp
 (aops:sub *final* 0)
+#+END_SRC
 
+
+#+BEGIN_SRC common-lisp
 ;; => #(-0.2552299499511719d0 0.6977165031679372d0 -0.09201786919631445d0 
     2.545779231948922d0 -2.7268834033920015d0 2.06742170401215d0 
     -3.5643606642114314d0 4.3841496471528565d0 -1.2499408321360161d0 
     3.7898237565504505d0 -2.156757703371111d0 1.671492236852646d0 -3.8990957484272046d0)
-```
+#+END_SRC
 
-### Log features (only the first feature vector): 
-```
+
+*** Log features (only the first feature vector): 
+#+BEGIN_SRC common-lisp
 (aops:sub (log-mel-features *mfcc-obj*) 0)
+#+END_SRC
 
+
+
+#+BEGIN_SRC common-lisp
 ;; => #(12.401644278013046d0 12.325183782025274d0 9.894037918469072d0
   11.87436536355766d0 12.463401597782262d0 13.376237316823566d0
   13.757091339832925d0 11.96858341994982d0 11.816220889334238d0
@@ -74,13 +132,16 @@
   12.06174263434067d0 12.350199690286363d0 11.429605881258349d0
   11.241366028260343d0 10.990932261487938d0 10.338422068953724d0
   10.299368768592627d0)
+#+END_SRC
 
-```
 
-### Energy
-```
+*** Energy
+#+BEGIN_SRC common-lisp
 *energy*
+#+END_SRC
 
+
+#+BEGIN_SRC common-lisp
 ;; => #(1.7626966062871602d8 1.2568503323757899d8 1.2285623717743166d8
   1.5382597390317196d8 1.4441726597019002d8 1.0788927786367057d8
   8.794667780189571d7 6.599442155411122d7 8.265703456594153d7
@@ -114,9 +175,15 @@
   1.4626445672763875d8 1.6484551683536372d8 1.6866419891178918d8
   1.5416647842088905d8 1.6862203855037698d8 3.7134247948912156d8
   1.9424501168760452d9) 
-```
+#+END_SRC
 
-## License
-
-AGPL
+** Reference:
+[1]. Spoken Language Processing: A Guide to Theory, Algorithm and System Devel-
+opment
+[2]. [[https://www.gaussianwaves.com/2013/12/power-and-energy-of-a-signal/][Power and Energy of a Signal]]
+[3]. [[http://practicalcryptography.com/miscellaneous/machine-learning/guide-mel-frequency-cepstral][Practical cryptography blog-post]]
+[4]. Audio Processing and Speech Recognition Concepts, Techniques and Research
+Overviews by Soumya Sen, Anjan Dutta, Nilanjan Dey
+[5]. [[https://haythamfayek.com/2016/04/21/speech-processing-for-machine-learning.html][Speech-processing-for-machine-learning]]
+[6]. [[https://archive.org/details/SpectrogramCepstrumAndMel-frequency_636522][Archive video about MFCC]]
 
